--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,10 @@ StyleCopReport.xml
 # Chutzpah Test files
 _Chutzpah*
 
+#ignore appsettings.json 
+appsettings.json
+
+
 # Visual C++ cache files
 ipch/
 *.aps
